--- a/lab3_front/package.json
+++ b/lab3_front/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue_test",
+  "name": "lab3_front",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "element-plus": "^2.1.8",
     "element-ui": "^2.15.6",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
