--- a/lab3_behind/pom.xml
+++ b/lab3_behind/pom.xml
@@ -46,6 +46,12 @@
             <artifactId>java-jwt</artifactId>
             <version>3.19.0</version>
         </dependency>
+        <!-- Spring Boot Redis 依赖 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>2.6.5</version>
+        </dependency>
 
     </dependencies>
 
