--- a/lab3_front/package.json
+++ b/lab3_front/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.8.3",
     "element-plus": "^2.1.8",
     "element-ui": "^2.15.6",
+    "papaparse": "^5.3.2",
     "vue": "^3.2.31",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
